# fasttracker2-clone

./: .gitignore  CMakeLists.txt  HOW-TO-COMPILE.md  HOW-TO-COMPILE.txt  LICENSE.md  LICENSES.txt  README.md  make-linux.sh  make-os-x.sh
release/: LICENSES.txt
src/: LICENSE.md  LICENSE.txt  ft2-clone.rc  ft2_about.c  ft2_audio.c  ft2_audio.h  ft2_audioselector.c  ft2_audioselector.h  ft2_checkboxes.c  ft2_checkboxes.h  ft2_config.c  ft2_config.h  ft2_diskop.c  ft2_diskop.h  ft2_edit.c  ft2_edit.h  ft2_events.c  ft2_events.h  ft2_gfxdata.h  ft2_gui.c  ft2_gui.h  ft2_header.h  ft2_help.c  ft2_help.h  ft2_inst_ed.c  ft2_inst_ed.h  ft2_keyboard.c  ft2_keyboard.h  ft2_main.c  ft2_midi.c  ft2_midi.h  ft2_mix.c  ft2_mix.h  ft2_mix_macros.h  ft2_module_loader.c  ft2_module_loader.h  ft2_module_saver.c  ft2_module_saver.h  ft2_mouse.c  ft2_mouse.h  (+42 more)
src/gfxdata/: ft2_gfx_fonts.c  ft2_gfx_instr.c  ft2_gfx_sampler.c
src/gfxdata/bmp/: LICENSE.md  LICENSE.txt  readme.txt
src/helpdata/: FT2.HLP  ft2_help_data.h
src/rtmidi/: RtMidi.cpp  RtMidi.h  rtmidi_c.cpp  rtmidi_c.h
vs2017_project/: ft2-clone.sln
vs2017_project/ft2-clone/: ft2-clone.vcxproj  ft2-clone.vcxproj.filters
vs2019_project/: ft2-clone.sln
vs2019_project/ft2-clone/: ft2-clone.vcxproj  ft2-clone.vcxproj.filters
